# SaneWorld

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp  ogl_core.cpp  ogl_core.hpp
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: gl.h  glad.h
dependencies/glad/src/: glad.c
dependencies/imgui_wrapper/: CMakeLists.txt
dependencies/linmath/: linmath.h
res/: imgui.ini
res/gamedata/: sandbox.xml
res/level/: sandbox.xml
src/: Sandbox.cpp  SaneWorld.cpp  main.cpp  shader_code.hpp  shape_helper.hpp
src/MaskedOcclusionCulling/: CullingThreadpool.cpp  MaskedOcclusionCulling.cpp  MaskedOcclusionCulling.h
src/OGL/: ogl_buffer.cpp  ogl_buffer.hpp  ogl_core.cpp  ogl_core.hpp  ogl_shader.cpp  ogl_shader.hpp  ogl_shapeMgr.hpp
src/Shaders/: ogl_basic_shaders.hpp
src/Utils/: logging.hpp  noncopyable.hpp
